Fixed overflow

--- a/media/extra.css
+++ b/media/extra.css
@@ -13,7 +13,6 @@ textarea {
 
 body {
 	overflow: auto;
-	overflow-x: hidden;
 }
 
 body::-webkit-scrollbar-corner {
